Spelling error ("geometric") fixed

--- a/Monte Carlo Pricing.ipynb
+++ b/Monte Carlo Pricing.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "$$Introduction$$\n",
     "\n",
-    "Monte Carlo simulation is one of the most widely-used numerical methods in the pricing of deriviative securities (and in other fields as well). The idea behind its application in finance it is very intuitive. We have some derivative security, say a call option on a stock, whose value depends in some way on the future evolution of the price of the underlying asset, the stock in this case. In Monte Carlo, we simulate many such paths (which follow a goemetric Brownian motion), calculate the discounted payoff of the option in each path, and then take the average of these discounted payoffs over all such paths. \n",
+    "Monte Carlo simulation is one of the most widely-used numerical methods in the pricing of deriviative securities (and in other fields as well). The idea behind its application in finance it is very intuitive. We have some derivative security, say a call option on a stock, whose value depends in some way on the future evolution of the price of the underlying asset, the stock in this case. In Monte Carlo, we simulate many such paths (which follow a geometric Brownian motion), calculate the discounted payoff of the option in each path, and then take the average of these discounted payoffs over all such paths. \n",
     "\n",
     "A bit more formally, suppose we have a derivative security whose payoff, f(S), is a function of the underlying asset, S. Then the fair value of the derivative security is given by \n",
     "\n",
